AGREGUE PAGINA PRUEBA A INDEX

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 <li><a href="tienda.html">TIENDA</a></li>
                 <li><a href="como-comprar.html">COMO COMPRAR</a></li>
                 <li><a href="contacto.html">CONTACTO</a></li>
+                <li><a href="prueba.html">PRUEBA</a></li>
             </ul>
 
         </nav>
