--- a/index.html
+++ b/index.html
@@ -6,35 +6,55 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="stylesheet" href="css/estilos.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 
 <body>
-
+    <!--NAV BOOSTRAP-->
     <header class="header">
-        <div class="headerLogo">
-            <img src="images/logo.png" alt="Logo">
-        </div>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="index.html"><img
+                        src="/Users/cmartinez/Desktop/CURSOS-LIBROS/DESARROLLO-WEB/clase12y13-bootstrap/12-desafio1/images/logo2.png"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
+                    aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarScroll">
+                    <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="planes.html">Planes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="tienda.html">Tienda</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="como-comprar.html">Como Comprar</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="contacto.html">Contacto</a>
+                        </li>
 
-
-        <nav class="headerMenu">
-            <ul>
-                <li><a href="index.html">INICIO</a></li>
-                <li><a href="planes.html">PLANES</a></li>
-                <li><a href="tienda.html">TIENDA</a></li>
-                <li><a href="como-comprar.html">COMO COMPRAR</a></li>
-                <li><a href="contacto.html">CONTACTO</a></li>
-                <li><a href="prueba.html">PRUEBA</a></li>
-            </ul>
-
+                    </ul>
+                    <form class="d-flex">
+                        <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
+                        <button class="btn btn-outline-success" type="submit">Buscar</button>
+                    </form>
+                </div>
+            </div>
         </nav>
     </header>
-
+    <!--NAV BOOSTRAP-->
     <main class="main__tittle">
 
-        <h1>Conoce nuestros planes!</h1>
+        <div id="mainTittle">
+            <h1>Conoce nuestros planes!</h1>
+        </div>
+        
         <table class="main__table">
             <tr>
                 <th>
@@ -88,6 +108,59 @@
         <p>Comienza a entrenar!</p>
     </div>
 
+
+    <!--Carousel BOOSTRAP-->
+    <div id="container">
+        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="images/0-top-verde.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Tenemos todos los talles!</h5>
+                        <p>Calzas, Indumentaria, Tops</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="images/0-top-rosa.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>No te quedes sin tu equipo!</h5>
+                        <p>Calzas, Indumentaria, Tops</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="images/0-top-celeste.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Stock en todos los colores</h5>
+                        <p>Calzas, Indumentaria, Tops</p>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+
+
+    </div>
+
+
+    <!--Carousel BOOSTRAP-->
+
     <footer class="footer">
         <div class="footerMail">
             <p>Cualquier duda o consulta, envia un mail a: infojulipuente@gmail.com</p>
@@ -106,6 +179,9 @@
         </nav>
     </footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
